--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -1,23 +1,62 @@
-name: Build Jekyll site
+name: Build Jekyll site with Image Compression
+
 on:
- push:
-   branches: ["main"]
+  push:
+    branches: ["main"]
+
 permissions:
-  contents: read
+  contents: write  # Changed from 'read' to 'write' to allow committing compressed images
   pages: write
   id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Added: needed to detect changed files
+      
+      # NEW: Detect if any images were added/modified
+      - name: Detect new images
+        id: detect-images
+        run: |
+          if git diff --name-only HEAD^ HEAD | grep -E '\.(jpg|jpeg|png)$'; then
+            echo "has-images=true" >> $GITHUB_OUTPUT
+          else
+            echo "has-images=false" >> $GITHUB_OUTPUT
+          fi
+      
+      # NEW: Compress images if detected
+      - name: Compress Images
+        if: steps.detect-images.outputs.has-images == 'true'
+        uses: ./.github/actions/image-compressor
+        with:
+          images-path: 'assets/images'  # Update this to match your images folder
+          quality: 85
+          max-width: 1920
+      
+      # NEW: Commit compressed images back to repo
+      - name: Commit compressed images
+        if: steps.detect-images.outputs.has-images == 'true'
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add assets/images/
+          git diff --quiet && git diff --staged --quiet || git commit -m "chore: compress images [skip ci]"
+          git push
+      
+      # Your existing steps continue below
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      
       - name: Build
         uses: actions/jekyll-build-pages@v1
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
